--- a/myApp/index.html
+++ b/myApp/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>myApp</title>
+	<title>스케줄퍼즐</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -76,8 +76,7 @@
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
                     <li><a href="tuto.html">튜토리얼</a></li>
 					<li><a href="start.html">시작하기</a></li>
-                    <li><a href="index.html">어플목적</a></li>
-                    <li><a href="index.html">어플설명</a></li>
+                    <li><a href="about.html">어플설명</a></li>
                     
 				</ul>
 			</nav>
