--- a/myApp/tuto.html
+++ b/myApp/tuto.html
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -74,9 +74,8 @@
 				<ul>
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
                     <li><a href="tuto.html">튜토리얼</a></li>
-					<li><a href="index.html">시작하기</a></li>
-                    <li><a href="index.html">어플목적</a></li>
-                    <li><a href="index.html">어플설명</a></li>
+					<li><a href="start.html">시작하기</a></li>
+                    <li><a href="about.html">어플설명</a></li>
                     
 				</ul>
 			</nav>
@@ -84,7 +83,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">이름들어가는곳</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">튜토리얼</h2>
 				<div>
 					<img src="images/logo.png">
 					<img src="images/logo.png">
