--- a/myApp/index.html
+++ b/myApp/index.html
@@ -104,7 +104,7 @@
 							<img src="images/튜토.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">튜토리얼</h3>
 						</a>
-						<a class='pngs animate-box' href="index.html">
+						<a class='pngs animate-box' href="about.html">
 							<img src="images/설명.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">어플설명</h3>
 						</a>
