--- a/myApp/about.html
+++ b/myApp/about.html
@@ -89,11 +89,12 @@
 					<p>
 						한학기마다 찾아오는 대학생들의 골치아픈 과제, 수강신청!<br><br>
 						시간표짜기 귀찮고 힘들어서<br>
-						그래서 동기들이 맞춘 시간표 그대로 따라 하긴 하는데<br>
+						동기들이 맞춘 시간표 그대로 따라 하긴 하는데<br>
 						이 시간표가 베스트인가 의심스러울때,<br><br>
 						난 재수강도 해야되서 쩔수없이 내 알아서 시간표짜야될때,<br><br>
 						수강신청실패후 어쩔수 없이 교양,일선 들어야되는데 너무 많을때,<br><br>
-						수강신청 정정기간에 강의 첫주 들어봤는데 영 아니어서 바꾸고 싶은데<br>
+						수강신청 정정기간에 강의 첫주 들어봤는데<br>
+						영 아니어서 바꾸고 싶은데<br>
 						미리 짜놓은 플랜B 시간표가 필요할때,<br><br>
 						공강 이틀하고 싶을때,<br><br>
 						그럴때 '스케줄퍼즐'을 사용하면 좋아요.<br><br><br>
