--- a/myApp_backup/about.html
+++ b/myApp_backup/about.html
@@ -105,7 +105,7 @@
 						이 어플은 '웹뷰앱'으로 &nbsp;<p style='color: red; display: inline-block; margin: 0px;'>인터넷 연결</p>이 꼭 필요해요~<br><br>
 						스마트폰으로 이 어플을 사용할 수 있지만,<br>
 						PC로도 사용할 수 있게 웹 사이트도 있어요~<br>
-						<p style='color: blue; display: inline-block; margin: 0px;'>대충 사이트주소 적는 곳</p><br><br>
+						<p style='color: blue; display: inline-block; margin: 0px;'>https://schezzle.netlify.com</p><br><br>
 						이 어플은 수많은 강의를 입력하면<br>
 						그 강의들을 조합해서 가능한 시간표들을 만들어주어요~<br><br><br><br><br><br><br><br>
 						- 시나리오 -
