--- a/myApp_backup_완성/start.html
+++ b/myApp_backup_완성/start.html
@@ -86,7 +86,7 @@
 				<h2 class="animate-box big_title" data-animate-effect="fadeInLeft" style='margin-bottom: 5px; color: rgb(128,159,255);'>시간표는 내가 맞춰줄게!</h2>
 				<h2 class="animate-box big_title" data-animate-effect="fadeInLeft" style='margin-bottom: 40px; color: rgb(128,159,255);'>입력만 해줘!</h2>
 				<div>
-					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px;'>
+					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px; font-size: 20px;'>
 						필수로 들을 강의들
 						<button id="fir_lec_btn" onclick="add_lec(this, 1);">+</button>
 					</h3>
@@ -121,7 +121,7 @@
 						</table> -->
 					</div>
 					<hr>
-					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px;'>
+					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px; font-size: 20px;'>
 						선택으로 듣고싶은 강의들
 						<button id="sec_lec_btn" onclick="add_lec(this, 2);">+</button>
 					</h3>
@@ -157,7 +157,7 @@
 						
 					</div>
 					<hr>
-					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px;'>
+					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px; font-size: 20px;'>
 						들을 강의 갯수
 						<button id="num_lec_+_btn" onclick='add_num(this);'>+</button>
 						<button id="num_lec_-_btn" onclick='sub_num(this);'>-</button>
@@ -166,7 +166,7 @@
 						0
 					</p>
 					<hr>
-					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px;'>
+					<h3 class="animate-box" data-animate-effect="fadeInLeft" style='height: 15px; font-size: 20px;'>
 						공강할 요일 선택
 					</h3>
 					<!-- <button onclick='test(this);'>test</button> -->
