--- a/schezzle/tuto.html
+++ b/schezzle/tuto.html
@@ -131,7 +131,7 @@
 			'(1/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">안녕하세요! 튜토리얼이에요.<br>바로설명 드리자면 처음 "시작하기"를 들어가면 그림과 같이 떠요.</p>',
 			'(2/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">저 빨간 동글이 부분을 터치하면<br>그림처럼 네모난것이 생겨요.</p>',
 			'(3/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">강의이름과 무슨요일, 몇교시인지 입력해보았어요.<br>전 필수로 들을 강의를 3개로 잡았어요.</p>',
-			'(4/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">그 다음에 저 빨간 동금이 부분을 터치하면<br>위에서 했던거와 같이 네모난것이 생겨요.</p>',
+			'(4/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">그 다음에 저 빨간 동글이 부분을 터치하면<br>위에서 했던거와 같이 네모난것이 생겨요.</p>',
 			'(5/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">위에 있던 3개의 강의는 이름 또는 시간이 겹치면 안되지만,<br>여기서는 이름이 겹치든 시간이 겹치든 상관이 없어요.</p>',
 			'(6/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">보통 7과목 듣지요?<br>빨간 동글이 터치해서 7까지 올리면 됩니다.</p>',
 			'(7/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">짠!</p>',
