--- a/myApp/tuto.html
+++ b/myApp/tuto.html
@@ -140,7 +140,7 @@
 			'(10/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">안녕하세요! 주의사항이에요.<br>이름칸에 공백으로 남겨두면 안돼요~</p>',
 			'(11/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">저 뜻은 교수님이 한시간 안에 두시간 분량의 진도를 나간다는 뜻인데<br>가능한 교수님도 계시겠지만 여러분들이 죽어나가니<br>어쨌든 저건 불가능한 거에요~</p>',
 			'(12/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">"필수"인 강의들은 시간이 겹치면 안돼요~<br>반면에, "선택"인 강의들은 시간이 겹쳐도 돼요~</p>',
-			'(13/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">"필수"인 강의들은 시간이 겹치면 안돼요~<br>반면에, "선택"인 강의들은 시간이 겹쳐도 돼요~<br>Q: 전필인데 이름이 같은 강의가 두개에요!<br>A: ...미안해요.</p>'];
+			'(13/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">"필수"인 강의들은 이름이 겹치면 안돼요~<br>반면에, "선택"인 강의들은 이름이 겹쳐도 돼요~<br>Q: 전필인데 이름이 같은 강의가 두개에요!<br>A: ...미안해요.</p>'];
 
 
 		images = [];
