--- a/myApp_backup_완성/start.html
+++ b/myApp_backup_완성/start.html
@@ -194,9 +194,16 @@
 
 	<style>
 		@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
-			
+		@font-face{
+			font-family: 'nanum';
+			font-weight: normal;
+			font-style: normal;
+			src:url('fonts/nanum/nanumpen.ttf');
+		}
+
 		.big_title{
 			font-family: 'Nanum Pen Script', cursive;
+			font-family: 'nanum';
 			font-size: 45px;
 		}
 
