--- a/myApp/index.html
+++ b/myApp/index.html
@@ -84,12 +84,13 @@
 
 			<div class="fh5co-narrow-content">
 				<h2 class="fh5co-heading animate-box big_title" data-animate-effect="fadeInLeft">
-					<p class='one_title' style='color: rgb(255,128,128);'>스</p>
+					<!-- <p class='one_title' style='color: rgb(255,128,128);'>스</p>
 					<p class='one_title' style='color: rgb(255,223,128);'>케</p>
 					<p class='one_title' style='color: rgb(191,255,128);'>줄</p>
 					<p class='one_title' style='color: rgb(128,255,255);'>퍼</p>
 					<p class='one_title' style='color: rgb(128,159,255);'>즐</p>
-					<p class='one_title' style='color: rgb(191,128,255);'>!</p>
+					<p class='one_title' style='color: rgb(191,128,255);'>!</p> -->
+					<img src='images/index제목.PNG' style='height: 100px;'>
 				</h2>
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
 					<div id='big-div' class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
