--- a/myApp/index.html
+++ b/myApp/index.html
@@ -90,10 +90,10 @@
 					<p class='one_title' style='color: rgb(128,255,255);'>퍼</p>
 					<p class='one_title' style='color: rgb(128,159,255);'>즐</p>
 					<p class='one_title' style='color: rgb(191,128,255);'>!</p> -->
-					<img src='images/index제목.PNG' style='height: 90px;'>
+					<img class='ind_title' src='images/index제목.PNG'>
 				</h2>
-				<div class="row animate-box" data-animate-effect="fadeInLeft">
-					<div id='big-div' class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
+				<div class="animate-box ind_div" data-animate-effect="fadeInLeft">
+					<div id='big-div' class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item ind_div">
 						<a class='pngs animate-box' href="start.html">
 							<img src="images/시작.png" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">시작하기</h3>
@@ -108,8 +108,6 @@
 							<h3 class="fh5co-work-title">어플설명</h3>
 						</a>
 					</div>
-					<div class="clearfix visible-md-block"></div>
-					<div class="clearfix visible-sm-block"></div>
 					
 				</div>
 			</div>
