--- a/myApp/tuto.html
+++ b/myApp/tuto.html
@@ -85,9 +85,9 @@
 				<h2 class="fh5co-heading animate-box big_title" data-animate-effect="fadeInLeft">튜토리얼</h2>
 				<div style='text-align: center;'>
 					<div class='animate-box'>
-						<button style='float: left; margin-top: 300px;' onclick='pre_image();'>Prev</button>
+						<button style='float: left; margin-top: 300px; width: 15%;' onclick='pre_image();'>Prev</button>
 						<img id='img_tag' src="images/0.png">
-						<button style='float: right; margin-top: 300px;' onclick='next_image();'>Next</button>
+						<button style='float: right; margin-top: 300px; width: 15%;' onclick='next_image();'>Next</button>
 					</div>
 					<p class='animate-box' id='expl' style='margin-left: 30px; margin-right: 30px;'>
 						'가나다라'""
