--- a/schezzle/about.html
+++ b/schezzle/about.html
@@ -108,9 +108,8 @@
 						<p style='color: blue; display: inline-block; margin: 0px;'>https://schezzle.netlify.com</p><br><br>
 						이 어플은 수많은 강의를 입력하면<br>
 						그 강의들을 조합해서 가능한 시간표들을 만들어주어요~<br><br><br><br><br><br><br><br>
-						- 시나리오 -
 					</p>
-					<details id='scen'>
+					<!-- <details id='scen'>
 						<summary style='color: blue; font-size: 15px; width: 120px; cursor: pointer;' onclick=fold();>펼치기</summary>
 						<p style='margin: 10px; font-size: 13px;'>
 							시나리오1<br>
@@ -138,7 +137,7 @@
 							???1 : 아니다..겹치는시간도 있고..하나하나만들어봐야되나? 공강도 만들고..머리아프네.<br><br>
 							???1 : 퍼즐맞추는것도 아니고...아맞다! '스케줄퍼즐'쓰면되지.<br><br>
 						</p>
-					</details>
+					</details> -->
 					<p><br><br><br><br><br><br><br><br><br><br></p>
 				</div>
 			</div>
