--- a/schezzle/tuto.html
+++ b/schezzle/tuto.html
@@ -148,7 +148,7 @@
 			'(8/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">공강할 요일을 선택했어요.<br>전 금요일을 공강으로 잡았어요.<br>공강 여러개 잡을 수 있지만 욕심가득한 시간표는 나오지않아요~</p>',
 			'(9/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">자 이제 "가능한 시간표들 보기" 버튼을 터치하면 말그대로 가능한 시간표들이 나와요<br>저는 운이 나빠 시간표 하나만 나왔지만<br>여러분은 플랜B 시간표들을 많이 볼 수 있을 거에요.</p>',
 			'(10/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">안녕하세요! 주의사항이에요.<br>이름칸에 공백으로 남겨두면 안돼요~</p>',
-			'(11/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">저 뜻은 교수님이 한시간 안에 두시간 분량의 진도를 나간다는 뜻인데<br>가능한 교수님도 계시겠지만 여러분들이 죽어나가니<br>어쨌든 저건 불가능한 거에요~</p>',
+			'(11/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">저건 불가능한 거에요~</p>',
 			'(12/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">"필수"인 강의들은 시간이 겹치면 안돼요~<br>반면에, "선택"인 강의들은 시간이 겹쳐도 돼요~</p>',
 			'(13/13)<br><p style="text-align: left; margin-top: 15px; font-size: 13px; font-weight:bold;">"필수"인 강의들은 이름이 겹치면 안돼요~<br>반면에, "선택"인 강의들은 이름이 겹쳐도 돼요~<br>Q: 전필인데 이름이 같은 강의가 두개에요!<br>A: ...미안해요.</p>'];
 
